--- a/myapi/src/main/resources/application.properties
+++ b/myapi/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-#spring.datasource.url=jdbc:h2:mem:testdb;DATABASE_TO_UPPER=false
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
