Create mock api with stubby

--- a/myapi/src/test/resources/application.properties
+++ b/myapi/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 #spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.sql.init.mode=never
+
+// For testing
+post_url=https://jsonplaceholder.typicode.com
