--- a/myapi/src/main/resources/application.properties
+++ b/myapi/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+
+// For production
+post_url=https://jsonplaceholder.typicode.com
