Working with stubby

--- a/myapi/src/test/resources/application.properties
+++ b/myapi/src/test/resources/application.properties
@@ -3,4 +3,4 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=never
 
 // For testing
-post_url=https://jsonplaceholder.typicode.com
+post_url=http://localhost:8882
